# cadence

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  fly.toml  modal_train.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml
data/: download.py  label.py  split.py
data/processed/: labels.parquet  test.parquet  train.parquet  val.parquet
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: MetricPanel.tsx  TurnIndicator.tsx
frontend/src/hooks/: useAudioStream.ts
model/: MODEL_CARD.md  cadence_model.py  dataset.py  eval.py  export_onnx.py  train.py
notebooks/: 01_data_exploration.ipynb  02_training_curves.ipynb  03_error_analysis.ipynb
server/: Dockerfile  baseline.py  endpointer.py  main.py
tests/: conftest.py  test_endpointer.py  test_server.py
