[project]
name = "cadence"
version = "0.1.0"
description = "Smart turn-taking / endpointing for voice agents"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "pyarrow>=16.0.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "silero-vad>=5.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "wandb>=0.17.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "model", "server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
